[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hadoku-printtool-server"
version = "0.1.0"
description = "Python sidecar pipelines for hadoku-printTool local server (sticker bg-removal + cutlines)"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=9.0",
    "numpy>=1.21",
    "scipy>=1.7",
    # rembg 2.x split ONNX into a separate extra — [cpu] pulls onnxruntime
    "rembg[cpu]>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["python/sticker"]

[tool.ruff]
line-length = 100
target-version = "py311"
